target_sources(${PROJECT_NAME}
PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/AnchoredSpring.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/BoundingBox.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/BoundingSphere.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/BVHNode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CollisionBox.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CollisionCallback.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CollisionObject.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CollisionPlane.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CollisionPrimitive.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CollisionSphere.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/DefaultRigidBodyEngineCI.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/DirectedForce.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ForceGenerator.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ForceRegistry.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Gravity.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/PhysicsMaterial.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/RigidBody.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/RigidBodyDef.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/RigidBodyEngineCI.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/RigidBodyWorld.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Spring.cpp
)

add_subdirectory(CollisionDetection)
add_subdirectory(CollisionResolution)
