target_sources(${PROJECT_NAME}
PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/BroadPhaseFilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CollisionAlgorithmMatrix.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CollisionData.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CollisionDetector.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CollisionMask.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CollisionPair.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Contact.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/IBroadPhaseFilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/IIntermediatePhaseFilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/INarrowPhaseAlgorithm.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/INarrowPhaseFilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/NarrowPhaseFilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/OctreeBroadPhaseFilter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Octree.cpp
)

add_subdirectory(Algorithm)
